namespace Logistik;

public class Order
{
    public Transport Transport { get; set; }
    public User User { get; set; }
}