namespace Logistik;

public class User
{
    public string Name { get; set; }
}